feat: week 3
