# routes/index.js
@@ -1,6 +1,8 @@
 const router = require("express").Router();
 
 router.use("/", require("./swagger"));
-router.use("/contacts", require("./contacts"));
+router.use("/posts", require("./posts"));
+router.use("/comments", require("./comments"));
+router.use("/users", require("./user"));
 
 module.exports = router;
